--- a/orm/pom.xml
+++ b/orm/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>orm-test</artifactId>
+    <artifactId>orm</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
