--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -12,8 +12,13 @@
         version="2.5">
 
     <error-page>
-        <error-code>500</error-code>
-        <location>/error.jsp</location>
+        <error-code>404</error-code>
+        <location>/ErrorServlet</location>
+    </error-page>
+
+    <error-page>
+        <exception-type>java.lang.Throwable</exception-type>
+        <location>/ErrorServlet</location>
     </error-page>
 
     <listener>
@@ -21,13 +26,13 @@
     </listener>
 
     <servlet>
-        <servlet-name>passenger</servlet-name>
-        <servlet-class>servlets.PassengerServlet</servlet-class>
+        <servlet-name>ticket</servlet-name>
+        <servlet-class>servlets.TicketServlet</servlet-class>
     </servlet>
 
     <servlet-mapping>
-        <servlet-name>passenger</servlet-name>
-        <url-pattern>/passenger</url-pattern>
+        <servlet-name>ticket</servlet-name>
+        <url-pattern>/ticket</url-pattern>
     </servlet-mapping>
 
     <servlet>
