--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -36,4 +36,35 @@
         <url-pattern>/flight</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>errorServlet</servlet-name>
+        <servlet-class>servlets.ErrorServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>errorServlet</servlet-name>
+        <url-pattern>/error</url-pattern>
+    </servlet-mapping>
+
+    <error-page>
+        <error-code>404</error-code>
+        <location>/errorHandler</location>
+    </error-page>
+
+    <error-page>
+        <exception-type>exceptions.WebappException</exception-type>
+        <location>/errorHandler</location>
+    </error-page>
+
+    <servlet>
+        <servlet-name>errorHandler</servlet-name>
+        <servlet-class>servlets.ErrorHandlerServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>errorHandler</servlet-name>
+        <url-pattern>/errorHandler</url-pattern>
+    </servlet-mapping>
+
+
 </web-app>
