--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
+    <groupId>com.revature</groupId>
     <artifactId>webapp</artifactId>
     <version>0.1</version>
     <packaging>war</packaging>
@@ -29,9 +29,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.example</groupId>
+            <groupId>com.revature</groupId>
             <artifactId>orm</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0</version>
         </dependency>
     </dependencies>
 
