--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -29,6 +29,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.mariadb.jdbc</groupId>
+            <artifactId>mariadb-java-client</artifactId>
+            <version>2.7.4</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.revature</groupId>
             <artifactId>orm</artifactId>
             <version>1.0</version>
